examples/Passing/Loops/simple_while_2.c
int main() {
    while (1) {
        return 1;
    }
}
