examples/Failing/Unary/fail_comp2.c
int main ((( {
                return ~153;
                }
